css/main.css
/* ... */
.clearfix::after {
  clear: both;
}

/* ==========================================================================
   EXAMPLE Media Queries for Responsive Design.
   These examples override the primary ('mobile first') styles.
   Modify as content requires.
   ========================================================================== */

@media only screen and (min-width: 768px) {
  /*Tablet styles here*/

  /* General styles */
.content-wrapper {
  max-width: 640px;
  margin: 100px 0;
}

h2 {
  font-size: 2.25em;
  line-height: 1.333;
}

h3 {
  font-size: 1.5em;
  line-height: 1.25;
}

/* Header */

header {
  justify-content: space-around;
  padding: 33px 0;
}

header .content-wrapper {
  width: 100%;
  justify-content: space-between;
}

header figure {
  width: 30%;

}

header nav {
  width: 20%;
}

header nav ul { 
  justify-content: space-between;
  list-style-type: none;
}

.header-divider {
    display: none;
}

/* Hero Area */

.hero-area {
  min-height: 600px;
}

.hero-area h1 {
  font-size: 3em;
  line-height: 1;
  margin: 0;
}

/* Aside */
aside .content-wrapper {
    margin: 50px 0;
    display: flex;
    justify-content: space-between;
    flex-flow: row wrap;
}

aside .content-wrapper .form-description,
aside .content-wrapper .form {        
    width: 40%;        
    margin: 0;
}

/* Features */
 
.features h2 {
  margin-bottom: 20px;
}

.features article {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: column wrap;
  flex-basis: 50%;
}

.features .feature-description {
    width: 62%;
}

/* Reviews */
.reviews article {
  display: flex;
  justify-content: space-between;
}

.reviews article div,
.reviews article figure {
    width: 49%;         
}

.reviews h3 {
  width: 75%;
  margin: 0;
}

/* Footer */
footer .content-wrapper {
    width: 65%; /*Where does this come from?*/
    margin: 100px 0;
}

footer .footer-content {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  flex-direction: row;
}

footer .contact {
    margin-bottom: 0;
}

footer h4 {
  font-size: 1.5em;
  margin-bottom: 40px;
}

footer p {
  line-height: 1.125em;
}

footer .copyright {
    width: 100%;
}

/* ==========================================================================
   About Page
   ========================================================================== */
 
.mission-content {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-top: 20px;
}

.mission-content p {
    width: 45%;
}

.map figure {
  padding-bottom: 55%;
}

.contact-content {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
}

.contact-content h4 {
  font-size: 1.5em;
}
/* ==========================================================================
   FAQ Page
   ========================================================================== */

.faq .content-wrapper {
    justify-content: space-between;
}

.questions {
    flex-basis: 45%;
}

.faq h2 {
    width: 100%;
}

.faq h4,
.faq p {
  font-size: 0.875em;
  line-height: 1.125;
}
}

@media only screen and (min-width: 1200px) {
  /*Desktop styles here*/
 
  /* General styles */
  .content-wrapper {
    max-width: 960px;
    
  }

  header {
    padding: 15px 0;
  }

  header nav ul {
    display: flex;
    justify-content: space-between;
  }

  h2 {
    font-size: 2.25em;
  }

  h3,
  h4 {
    font-size: 1.875em;
    line-height: 1;
  }
  
  p {
    font-size: 1.125em;
    line-height: 1.333;
  }
  /* Hero Area */
  
  .hero-area h1 {
    width: 80%;
    font-size: 3.75em;
  }
  
  /* Aside */
  aside .content-wrapper {
      justify-content: space-around;
      
  }

  aside .content-wrapper .form-description,
  aside .content-wrapper .form {        
      width: 30%;        
  }
  
  .form-description p {
    font-size: 1.125em;
  }

  /* Features */
   
  .features article {
    flex-basis: 33%;
  }
  
  .features h2 {
    width: 88%;
  }
 
  /* Reviews */

  .reviews h2 {
    padding-bottom: 50px;
  }

  .reviews article div {
      width: 40%;         
  }

  footer h4 {
    font-size: 1.875em;
  }

  /* ==========================================================================
     About Page
     ========================================================================== */
   
  .mission h2,
  .contact-section .content-wrapper h2 {
    width: 95%;
    font-size: 3em;
  }
  .map figure {
    padding-bottom: 47%;
  }
  .contact-content h4 {
    font-size: 1.875em;
  }
  /* ==========================================================================
     FAQ Page
     ========================================================================== */
  
  .faq h2 {
      width: 100%;
      font-size: 3em;
  }

  .faq h4,
  .faq p {
    font-size: 1.125em;
    line-height: 1;
  }

}
/* ... */

